[tool.poetry]
name = "infinite-minesweeper"
version = "0.0.0"
description = ""
authors = ["k01e <k01e.alm07@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
