[tool.poetry]
name = "txsweeper"
version = "0.5.1"
description = "An infinitely generative minesweeper game."
authors = ["k01e <k01e.alm07@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.1"
textual = "0.5.0"

[tool.poetry.scripts]
txSweeper = "txsweeper.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
